--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "login-register-bend",
+  "name": "bite-my-kitchen",
   "version": "1.0.0",
+  "description":"backend of food recipes",
   "main": "index.js",
+  "engines":{
+    "node":"14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -17,6 +21,6 @@
     "mongodb": "^4.10.0",
     "nodemailer": "^6.8.0",
     "randomstring": "^1.2.2"
-  },
-  "description": ""
+  }
+  
 }
